--- a/css/main.css
+++ b/css/main.css
@@ -2550,3 +2550,8 @@ blockquote footer, blockquote small, blockquote .small {
     font-size: 16px;
   }
 }
+
+figure {
+  min-width: 150px;
+  min-height: 100px;
+}
