--- a/css/main.css
+++ b/css/main.css
@@ -1424,6 +1424,7 @@ body > footer .copyrights {
 
 .portfolio-grid figure {
   width: 33.33333%;
+  height: 22.22222%;
   float: left;
   padding: 3px;
 }
@@ -2246,6 +2247,7 @@ blockquote footer, blockquote small, blockquote .small {
 @media only screen and (max-width: 1320px) {
   .portfolio-grid figure {
     width: 33.33333%;
+    height: 22.22222%;
   }
 }
 
@@ -2484,6 +2486,7 @@ blockquote footer, blockquote small, blockquote .small {
 @media only screen and (max-width: 769px) {
   .portfolio-grid figure {
     width: 50%;
+    height: 33.33333%;
   }
 
   .home-page-block h2 {
@@ -2540,6 +2543,7 @@ blockquote footer, blockquote small, blockquote .small {
 @media only screen and (max-width: 480px) {
   .portfolio-grid figure {
     width: 100%;
+    height: 66.66666%;
   }
 
   .home-page-block h2 {
