--- a/css/main.css
+++ b/css/main.css
@@ -856,6 +856,17 @@ body > footer .copyrights {
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
+.photo #canvas-image-blending {
+  max-width: 280px;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 
 .start-page-content .page-header .photo:hover {
   -webkit-transform: translateY(-9px);
